@@ -85,7 +85,11 @@ void CNAME(blasint n, FLOAT alpha, FLOAT *x, blasint incx, FLOAT *y, blasint inc
   //In that case, the threads would be dependent.
   if (incx == 0 || incy == 0)
 	  nthreads = 1;
-
+ 
+  //Temporarily walk around the low performance issue with small imput size & multithreads.
+  if (n <= 10000)
+	  nthreads = 1;
+  
   if (nthreads == 1) {
 #endif
 
